new implementation: admin portal with products, categories, orders, dashboard funtional, b2b portal with order for portal and message for whatsapp number register
