# app/infrastructure/database/models/__init__.py
@@ -1,9 +1,15 @@
 from app.infrastructure.database.models.admin_user_model import AdminUser
 from app.infrastructure.database.models.category_model import Category
+from app.infrastructure.database.models.order_model import (
+    Order,
+    OrderItem,
+)
 from app.infrastructure.database.models.product_model import Product
 
 __all__ = [
     "AdminUser",
     "Category",
+    "Order",
+    "OrderItem",
     "Product",
 ]
